style fix for social links on mobile

--- a/wp-content/themes/side/scss/src/styles.scss
+++ b/wp-content/themes/side/scss/src/styles.scss
@@ -544,8 +544,12 @@ p {
     height: 200px;
   }
 
-  .social {
+  body.single-review .social {
     top: 130px;
+  }
+
+  .social {
+    top: 10px;
   }
 }
 
